--- a/lectures/260-2017-09-20-neurophys-III.Rmd
+++ b/lectures/260-2017-09-20-neurophys-III.Rmd
@@ -38,11 +38,11 @@ output:
     
 ## Equilibrium potential
 
-- Voltage ($V_{K^+}$) that keeps system in equilibrium
+- Voltage ($V_{K}$) that keeps system in equilibrium
     - $[K^+]_{in}$ >> $[K^+]_{out}$
 - Nernst equation
-    - $V_{K^+}$ = $\frac{RT}{(+1)F}ln(\frac{[K^+]_{out}}{[K^+]_{in}})$
-    - $V_{K^+}$ = ~ -90 mV
+    - $V_{K}$ = $\frac{RT}{(+1)F}ln(\frac{[K^+]_{out}}{[K^+]_{in}})$
+    - $V_{K}$ = ~ -90 mV
     - Negative in/positive out keeps in/out concentration gradient
 
 ## Equilibrium potential
@@ -68,19 +68,19 @@ output:
 ## The $Na^+$ story
 
 - $Na^+$/$K^+$ pump pushes $Na^+$ **out**
-- $[Na^+]_{in}$ (~10 mM) << $[K^+]_{out}$ (~140 mM)
+- $[Na^+]_{in}$ (~10 mM) << $[Na^+]_{out}$ (~140 mM)
 - Equilibrium potential for $Na^+$, $V_{Na^+}$ = ~ +55 mV
     - Inside positive/outside negative to maintain outside > inside concentration gradient 
-- If $Na^+$ alone, $V_m$ --> $V_{Na^+}$ (~ +55 mV)
+- If $Na^+$ alone, $V_m$ --> $V_{Na}$ (~ +55 mV)
 
 ## Resting potential
 
 - Sum of outward $K^+$ and inward $Na^+$
     - Membrane more permeable to $K^+$ than $Na^+$, $p_{K+}> p_{Na^+}$ 
     - Outward flow of $K^+$ > inward flow of $Na^+$ 
-    - Resting potential (~-70 mV) closer to $Ve_{K^+}$ (-90 mV) than $Ve_{Na^+}$ (+55 mV)
+    - Resting potential (~-70 mV) closer to $Ve_{K}$ (-90 mV) than $Ve_{Na}$ (+55 mV)
 - Goldman-Hodgkin-Katz equation
-    - $V_m = \frac{RT}{F}ln(\frac{p_{K^+}[K^+]_{out}+p_{Na^+}[Na^+]_{out}}{p_{K^+}[K^+]_{in}+p_{Na^+}[Na^+]_{in}})$
+    - $V_m = \frac{RT}{F}ln(\frac{p_{K}[K^+]_{out}+p_{Na}[Na^+]_{out}}{p_{K}[K^+]_{in}+p_{Na}[Na^+]_{in}})$
 
 ## "Driving force" and equilibrium potential
 
