--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -153,6 +153,8 @@ title: "Schedule"
 - Neurochemistry II
 - Assignments
     -  Read [W&B](https://2e.mindsmachine.com/) 4:82-86
+- Materials
+    - Lecture notes. | [HTML slides](lectures/260-2017-09-27-neurochem-II.html) |
 
 ### Fri, Sep 29
 
