--- a/lectures/260-2017-09-25-neurochem-I.Rmd
+++ b/lectures/260-2017-09-25-neurochem-I.Rmd
@@ -213,22 +213,22 @@ Remember [Cl-out]>>[Cl-in]; Assume resting potential ~60 mV
 |              | **NMDA**       | Ca++              |
 | Metabotropic | mGlu       |                  |
 
-## GABA
+<!-- ## GABA -->
 
-- Primary inhibitory NT in CNS
-- Excitatory in developing CNS, [Cl-] in >> [Cl-] out
-- Binding sites for benzodiazepines (e.g., Valium), barbiturates, ethanol, etc.
+<!-- - Primary inhibitory NT in CNS -->
+<!-- - Excitatory in developing CNS, [Cl-] in >> [Cl-] out -->
+<!-- - Binding sites for benzodiazepines (e.g., Valium), barbiturates, ethanol, etc. -->
 
-| Type         | Receptor   | Esp Permeable to |
-|--------------|------------|------------------|
-| Ionotropic   | **GABA-A**     | Cl-              |
-| Metabotropic | **GABA-B**     | K+            |
+<!-- | Type         | Receptor   | Esp Permeable to | -->
+<!-- |--------------|------------|------------------| -->
+<!-- | Ionotropic   | **GABA-A**     | Cl-              | -->
+<!-- | Metabotropic | **GABA-B**     | K+            | -->
 
-## GABA {.smaller}
+<!-- ## GABA {.smaller} -->
 
-<div class="centered">
-<p><a href="https://commons.wikimedia.org/wiki/File:GABAA-receptor-protein-example.png#/media/File:GABAA-receptor-protein-example.png"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/GABAA-receptor-protein-example.png/1200px-GABAA-receptor-protein-example.png" alt="GABAA-receptor-protein-example.png" width=450px></a><br>"<a href="https://commons.wikimedia.org/wiki/File:GABAA-receptor-protein-example.png#/media/File:GABAA-receptor-protein-example.png">GABAA-receptor-protein-example</a>" by <a href="//en.wikipedia.org/wiki/User:Chemgirl131" class="extiw" title="wikipedia:User:Chemgirl131">Chemgirl131</a> at <a href="//en.wikipedia.org/wiki/" class="extiw" title="wikipedia:">English Wikipedia</a> - Transferred from&nbsp;<span class="plainlinks"><a class="external text" href="http://en.wikipedia.org">en.wikipedia</a></span>&nbsp;to Commons&nbsp;by&nbsp;<a href="//commons.wikimedia.org/wiki/User:Sreejithk2000" title="User:Sreejithk2000">Sreejithk2000</a>&nbsp;using <a href="//tools.wmflabs.org/commonshelper/" class="extiw" title="toollabs:commonshelper/">CommonsHelper</a>.. Licensed under Public Domain via <a href="https://commons.wikimedia.org/wiki/">Commons</a>.</p>
-</div>
+<!-- <div class="centered"> -->
+<!-- <p><a href="https://commons.wikimedia.org/wiki/File:GABAA-receptor-protein-example.png#/media/File:GABAA-receptor-protein-example.png"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/GABAA-receptor-protein-example.png/1200px-GABAA-receptor-protein-example.png" alt="GABAA-receptor-protein-example.png" width=450px></a><br>"<a href="https://commons.wikimedia.org/wiki/File:GABAA-receptor-protein-example.png#/media/File:GABAA-receptor-protein-example.png">GABAA-receptor-protein-example</a>" by <a href="//en.wikipedia.org/wiki/User:Chemgirl131" class="extiw" title="wikipedia:User:Chemgirl131">Chemgirl131</a> at <a href="//en.wikipedia.org/wiki/" class="extiw" title="wikipedia:">English Wikipedia</a> - Transferred from&nbsp;<span class="plainlinks"><a class="external text" href="http://en.wikipedia.org">en.wikipedia</a></span>&nbsp;to Commons&nbsp;by&nbsp;<a href="//commons.wikimedia.org/wiki/User:Sreejithk2000" title="User:Sreejithk2000">Sreejithk2000</a>&nbsp;using <a href="//tools.wmflabs.org/commonshelper/" class="extiw" title="toollabs:commonshelper/">CommonsHelper</a>.. Licensed under Public Domain via <a href="https://commons.wikimedia.org/wiki/">Commons</a>.</p> -->
+<!-- </div> -->
 
 ## Next time...
 
