--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -161,6 +161,8 @@ title: "Schedule"
 - Hormones and the brain
 - Assignments
     - Read [W&B](https://2e.mindsmachine.com/) 8:208-226
+- Materials
+    - Lecture notes. | [HTML slides](lectures/260-2017-09-29-hormones.html) |
 
 ---
 
