--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -134,7 +134,7 @@ title: "Schedule"
 
 ### Fri, Sep 22
 <!-- Rosh Hashana Day 2 -->
-- **Exam 1**.
+- **Exam 1**. | [Answer key](exam/psych-260-exam-1.ans.pdf) | 
 
 ---
 
@@ -171,8 +171,10 @@ title: "Schedule"
 ### Mon, Oct 2
 
 - **Quiz 2**.
-- Exam 1 returned.
+- Exam 1 returned. | [Answer key](exam/psych-260-exam-1.ans.pdf) | 
 - **Blog post 1 (of 3) due**.
+- Materials
+    - Lecture notes. | [HTML slides](lectures/260-2017-10-02-exam-1-returned.html) |
 
 ### Wed, Oct 4
 
