--- a/lectures/bib/bibliography.bib
+++ b/lectures/bib/bibliography.bib
@@ -1,3 +1,80 @@
+
+@ARTICLE{Herculano-Houzel2012-up,
+  title       = "The remarkable, yet not extraordinary, human brain as a
+                 scaled-up primate brain and its associated cost",
+  author      = "Herculano-Houzel, Suzana",
+  affiliation = "Instituto de Ci{\^e}ncias Biom{\'e}dicas, Universidade Federal
+                 do Rio de Janeiro, 21941-902, Rio de Janeiro, Brazil.
+                 suzanahh@gmail.com",
+  journal     = "Proc. Natl. Acad. Sci. U. S. A.",
+  publisher   = "National Acad Sciences",
+  volume      = "109 Suppl 1",
+  pages       = "10661--10668",
+  month       =  jun,
+  year        =  2012,
+  url         = "http://dx.doi.org/10.1073/pnas.1201895109",
+  language    = "en",
+  issn        = "0027-8424, 1091-6490",
+  pmid        = "22723358",
+  doi         = "10.1073/pnas.1201895109",
+  pmc         = "PMC3386878"
+}
+@ARTICLE{Herculano-Houzel2017-gf,
+  title   = "Numbers of neurons as biological correlates of cognitive
+             capability",
+  author  = "Herculano-Houzel, Suzana",
+  journal = "Current Opinion in Behavioral Sciences",
+  volume  =  16,
+  number  = "Supplement C",
+  pages   = "1--7",
+  month   =  aug,
+  year    =  2017,
+  url     = "http://www.sciencedirect.com/science/article/pii/S2352154616302637",
+  issn    = "2352-1546",
+  doi     = "10.1016/j.cobeha.2017.02.004"
+}
+
+@ARTICLE{Northcutt2002-jg,
+  title       = "Understanding vertebrate brain evolution",
+  author      = "Northcutt, R Glenn",
+  affiliation = "Neurobiology Unit, Scripps Institution of Oceanography and
+                 Department of Neurosciences, School of Medicine, University of
+                 California, San Diego, La Jolla, California 92093-0201.",
+  journal     = "Integr. Comp. Biol.",
+  volume      =  42,
+  number      =  4,
+  pages       = "743--756",
+  month       =  aug,
+  year        =  2002,
+  url         = "http://dx.doi.org/10.1093/icb/42.4.743",
+  language    = "en",
+  issn        = "1540-7063",
+  pmid        = "21708771",
+  doi         = "10.1093/icb/42.4.743"
+}
+
+@BOOK{Wrangham2009-vq,
+  title     = "Catching Fire: How Cooking Made Us Human",
+  author    = "Wrangham, Richard",
+  publisher = "Basic Books",
+  month     =  "26~" # may,
+  year      =  2009,
+  url       = "https://market.android.com/details?id=book-ebEOupKz-rMC",
+  language  = "en",
+  isbn      = "9780786744787"
+}
+
+@BOOK{Herculano-Houzel2016-oy,
+  title     = "The Human Advantage: A New Understanding of How Our Brain Became
+               Remarkable",
+  author    = "Herculano-Houzel, Suzana",
+  publisher = "MIT Press",
+  month     =  "18~" # mar,
+  year      =  2016,
+  url       = "https://market.android.com/details?id=book-DMqpCwAAQBAJ",
+  language  = "en",
+  isbn      = "9780262034258"
+}
 @article{swanson2005anatomy,
   title={Anatomy of the soul as reflected in the cerebral hemispheres: neural circuits underlying voluntary control of basic motivated behaviors},
   author={Swanson, Larry W},
