--- a/deadlines.Rmd
+++ b/deadlines.Rmd
@@ -7,11 +7,11 @@ title: "Deadlines"
 | F Sep 1   | [Quiz 1](quiz/psych-260-quiz-1-answers.pdf) |
 | F Sep 22  | [Exam 1](exam/psych-260-exam-1.ans.pdf) |
 | M Oct 2   | Quiz 2               |
-| M Oct 2   | [Blog post 1](blogs.html) due      |
+| M Oct 2   | [Blog post 1](blog-assignment.html) due      |
 | F Oct 13  | Exam 2               |
 | F Oct 27  | Quiz 3               |
-| F Nov 3   | [Blog post 2](blogs.html) due      |
+| F Nov 3   | [Blog post 2](blog-assignment.html) due      |
 | F Nov 8   | Exam 3               |
-| M Nov 27  | Short paper or [Blog post 3](blogs.html) due |
+| M Nov 27  | Short [paper](paper-assignment.html) or [Blog post 3](blog-assignment.html) due |
 | F Dec 1   | Quiz 4               |
 | TBA       | Exam 4               |
