--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -172,7 +172,7 @@ title: "Schedule"
 
 - **Quiz 2**.
 - Exam 1 returned. | [Answer key](exam/psych-260-exam-1.ans.pdf) | 
-- **Blog post 1 (of 3) due**.
+- **Blog post 1 (of 3) due**. | [Assignment details](blog-assignment.html) |
 - Materials
     - Lecture notes. | [HTML slides](lectures/260-2017-10-02-exam-1-returned.html) |
 
@@ -267,7 +267,7 @@ title: "Schedule"
 
 - Pain
 - Assignments
-    - **Blog post #2 (of 3) due**    
+    - **Blog post #2 (of 3) due**. | [Assignment details](blog-assignment.html) |
 
 ---
 
@@ -325,7 +325,7 @@ title: "Schedule"
 - Learning & memory
 - Assignments
     - Read 13:368-383
-- **Papers or blog post #3 (of 3) due**
+- **Papers or blog post #3 (of 3) due**. | [Blog assignment details](blog-assignment.html) | [Paper assignment details](paper-assignment.html) |
 
 ### Wed, Nov 30
 
